# ofmx2pgsql

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: ofmx2pgsql.example.ini
docker/: postgis.Dockerfile
scripts/: fetch_import.sh  fetch_ofmx.sh
sql/migrations/: 001_init.sql
src/ofmx2pgsql/: __init__.py  __main__.py  arinc.py  cli.py  db.py  openair.py  parser.py
src/ofmx2pgsql/sql/: __init__.py
tests/: test_arinc_parser.py  test_cli.py  test_parser.py
tests/data/: arinc_sample.pc
